[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset"
version = "1.6.0"
description = "Toolkit for Python-based database access."
readme = "README.md"
requires-python = ">=3.5"
license = {text = "MIT"}
keywords = ["sql", "sqlalchemy", "etl", "loading", "utility"]
authors = [
    {name = "Friedrich Lindenberg", email = "friedrich.lindenberg@gmail.com"},
    {name = "Gregor Aisch"},
    {name = "Stefan Wehrmeyer"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "sqlalchemy>=2.0.40",
    "alembic>=0.6.2",
    "banal>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pip",
    "pytest",
    "wheel",
    "flake8",
    "coverage",
    "psycopg2-binary",
    "PyMySQL",
    "cryptography",
]

[project.urls]
Homepage = "http://github.com/pudo/dataset"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["ez_setup", "examples", "test"]

[tool.flake8]
ignore = ["E501", "E123", "E124", "E126", "E127", "E128", "E722", "E741"]

[tool.pytest.ini_options]
testpaths = ["test"]